Chapter3/2.1/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-2-1-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput-2-1
  template:
    metadata:
      labels:
        app: logoutput-2-1
    spec:
      containers:
        - name: logoutput-2-1
          image: carlossss1011/2_1_logoutput
          ports:
            - containerPort: 3000
