Chapter3/2.1/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-2-1-svc
spec:
  selector:
    app: logoutput-2-1
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
