Chapter3/2.1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-pingpong-2-1-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logoutput-2-1-svc
            port:
              number: 2010
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-2-1-svc
            port:
              number: 2010
      - path: /pings
        pathType: Prefix
        backend:
          service:
            name: pingpong-2-1-svc
            port:
              number: 2010
